workloads/messaging-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yl-messaging
spec:
  ports:
  - port: 9999
    targetPort: 9999
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: yl-messaging
